--- a/styles/app.styl
+++ b/styles/app.styl
@@ -2,6 +2,9 @@
 
 @import 'global'
 
+@import 'animations'
+@import 'icons'
+
 @import 'components/header'
 @import 'components/spinner'
 @import 'components/stations'
@@ -15,26 +18,6 @@ h3
 	font-weight 400
 
 
-.slideUp-enter.slideUp-enter-active {
-  opacity 1
-  transform translate3d(0, 0, 0)
-}
-
-.slideUp-leave {
-  opacity 1
-  transition opacity .2s ease-in
-}
-
-.slideUp-leave.slideUp-leave-active {
-  opacity 0.01
-}
-
-
-$animationDelay = 0.05s
-	.slideUp-enter
-		opacity 0
-		transform translate3d(0, -40%, 0)
-		transition .5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
-		for $i in (1)..(20)
-			&:nth-child({$i})
-				transition-delay (($i * $animationDelay) - $animationDelay)
+.row
+	display flex
+	flex-direction row
