--- a/styles/components/departures.styl
+++ b/styles/components/departures.styl
@@ -51,15 +51,14 @@ Departures
 			text-overflow ellipsis
 
 		.-meta
-			font-size 60%
+			font-size 70%
 
 			.-track
-				width 50px
 				text-align center
 				padding-top 6px
 
 		.-time
-			width 50px
+			// width 50px
 
 			span
 				display inline-block
@@ -67,7 +66,7 @@ Departures
 				&:nth-child(1)
 					width 25px
 					text-align right
-					padding-right 10px
+					padding-right 6px
 
 				&:nth-child(2)
-					font-size 60%
+					font-size 50%
