--- a/styles/app.styl
+++ b/styles/app.styl
@@ -5,10 +5,11 @@
 @import 'animations'
 @import 'icons'
 
-@import 'components/header'
-@import 'components/stations'
 @import 'components/departures'
+@import 'components/header'
 @import 'components/journey'
+@import 'components/omnibutton'
+@import 'components/stations'
 
 body
 	color #333
