--- a/styles/components/header.styl
+++ b/styles/components/header.styl
@@ -11,5 +11,5 @@ main
 	border-bottom 1px solid #ccc
 	display flex
 	align-items center
-	// justify-content center
+	justify-content center
 	font-weight bold
