--- a/styles/components/stations.styl
+++ b/styles/components/stations.styl
@@ -7,16 +7,17 @@ Stations
 
  */
 
-.Stations a
-	display flex
-	flex-direction row
-	align-items center
-	min-height 48px
-	border-bottom 1px solid #eee
-	padding	0 16px
-	background #fff
-	z-index 5
-	position relative
+
+.Stations
+	transition opacity .3s
+	a
+		display flex
+		flex-direction row
+		align-items center
+		min-height 48px
+		border-bottom 1px solid #eee
+		padding	0 16px
+		background #fff
 
 .Stations h4
 	flex 1
