--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -11,6 +11,8 @@
 	height 56px
 
 	g path
+		opacity 1
+		transition .3s
 		transform-origin 50% 50%
 		transform translate3d(0, 0, 0)
 		backface-visibility hidden
@@ -19,6 +21,7 @@
 .icon.icon-spinner.loading svg
 	for $j in (1)..(8)
 		g path:nth-of-type({$j})
+			opacity 1 !important
 			-webkit-animation spin_full 1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite
 
 
@@ -26,3 +29,12 @@
 	0%   { transform: rotate(0deg);   }
 	100% { transform: rotate(360deg); }
 }
+
+
+// .icon.icon-spinner.back svg
+// 	g path:nth-of-type(odd)
+// 		opacity 0
+
+// 	g path:nth-of-type(even)
+// 		transform: rotate(90deg)
+// 			// -webkit-animation spin_full 1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite
