--- a/styles/components/departures.styl
+++ b/styles/components/departures.styl
@@ -1,23 +1,3 @@
-/*
-
-Departures
-	<a>
-		<figure style={style}><span>{departure.sname}</span></figure>
-		<section>
-			<header>
-				<h3><Icon type={departure.type} /> {departure.direction}</h3>
-				<div>
-					<span>{departureTimes.next}</span>
-					<span>{departureTimes.after}</span>
-				</div>
-			</header>
-			<ol>
-				<li>Läge <strong>{departure.track}</strong></li>
-			</ol>
-		</section>
-	</a>
- */
-
 .Departures
 
 	a
@@ -28,8 +8,9 @@ Departures
 		border-bottom 1px solid #eee
 		padding	0 16px
 		background #fff
-		z-index 5
-		position relative
+
+		&:last-child
+			box-shadow: 0 4px 15px -8px gray;
 
 		figure
 			display flex
