--- a/styles/components/header.styl
+++ b/styles/components/header.styl
@@ -13,3 +13,13 @@ main
 	align-items center
 	justify-content center
 	font-weight bold
+
+
+.example-enter {
+  opacity: 0.01;
+  transition: opacity .5s ease-in;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+}
