--- a/styles/components/omnibutton.styl
+++ b/styles/components/omnibutton.styl
@@ -7,7 +7,7 @@
 	box-shadow 0px 0px 10px rgba(0,0,0,.5)
 	border-radius 50%
 	height 56px
-	transition box-shadow .1s
+	transition .3s
 
 .Omnibutton:active
 	box-shadow 0px 0px 2px
