--- a/styles/global.styl
+++ b/styles/global.styl
@@ -8,6 +8,8 @@ body {
     font-family: 'RobotoDraft', sans-serif;
     margin: 0;
     font-size: 18px;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 h1,
 h2,
