--- a/styles/components/departures.styl
+++ b/styles/components/departures.styl
@@ -1,10 +1,11 @@
 .Departures
-	// transition max-height 1s
+	transition transform .3s
 	max-height 400px
 	// height auto
 	overflow scroll
 	overflow-x hidden
 	box-shadow 0 4px 15px -8px rgba(0,0,0,.8)
+	// margin-top: 56px;
 
 	a
 		display flex
