Updated React to 0.12-rc1

--- a/styles/components/stations.styl
+++ b/styles/components/stations.styl
@@ -1,17 +1,7 @@
-/*
-
-Stations
-	a
-		h3
-		span
-
- */
-
-
 .Stations
 	max-height calc(100% - 56px)
 
-	li
+	.Stations__item
 		display flex
 		flex-direction row
 		align-items center
