--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -25,16 +25,8 @@
 			-webkit-animation spin_full 1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite
 
 
-@keyframes spin_full {
-	0%   { transform: rotate(0deg);   }
-	100% { transform: rotate(360deg); }
-}
-
-
-// .icon.icon-spinner.back svg
-// 	g path:nth-of-type(odd)
-// 		opacity 0
-
-// 	g path:nth-of-type(even)
-// 		transform: rotate(90deg)
-// 			// -webkit-animation spin_full 1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite
+@keyframes spin_full
+	0%
+		transform rotate(0deg)
+	100%
+		transform rotate(360deg)
