--- a/styles/components/header.styl
+++ b/styles/components/header.styl
@@ -2,14 +2,12 @@ main
 	padding-top 56px
 
 .Header
+	flex-center-middle()
+	font-title()
 	position fixed
 	top 0
 	width 100%
 	height 56px
-	background #eee
-	border-bottom 1px solid #ccc
-	display flex
-	align-items center
-	justify-content center
-	font-weight bold
+	background _gray-lighter
+	border-bottom 1px solid _gray-light
 	z-index 1000
