--- a/styles/components/omnibutton.styl
+++ b/styles/components/omnibutton.styl
@@ -3,11 +3,10 @@
 	bottom 40px
 	right 60px
 	z-index 200
-	background #fff
-	box-shadow 0px 0px 10px rgba(0,0,0,.5)
+	box-shadow 0px 0px 10px _gray-darker
 	border-radius 50%
 	height 56px
-	transition .3s
+	transition box-shadow .2s
 
 .Omnibutton:active
 	box-shadow 0px 0px 2px
