--- a/styles/animations.styl
+++ b/styles/animations.styl
@@ -1,5 +1,5 @@
 .blink
-	color maroon !important
+	color #C44D58 !important
 	animation: blink .8s ease-in-out infinite;
 
 .animation-fall-enter.animation-fall-enter-active
