--- a/styles/app.styl
+++ b/styles/app.styl
@@ -21,6 +21,7 @@
 body
 	color _gray-darker
 	font-body()
+	-webkit-overflow-scrolling: touch;
 
 h3
 	font-weight 400
@@ -45,4 +46,3 @@ main
 .BLOKK
 	font-family 'BLOKKRegular'
 	height _list-height-departure
-	opacity 0.5
