--- a/styles/components/departures.styl
+++ b/styles/components/departures.styl
@@ -4,34 +4,35 @@
 	max-height 400px
 	overflow auto
 	overflow-x hidden
+	-webkit-overflow-scrolling touch
 	box-shadow 0 4px 15px -8px _gray-darker
 
-	.Departures__item
-		flex-center()
-		padding-h()
-		min-height _list-height-departure
-		border-bottom 1px solid _gray-lighter
+.Departures__item
+	flex-center()
+	padding-h()
+	min-height _list-height-departure
+	border-bottom 1px solid _gray-lighter
 
-		h4
-			flex 1
-			ellipsis()
+	h4
+		flex 1
+		ellipsis()
 
-		.-meta
-			font-subheader()
+	.-meta
+		font-subheader()
 
-			.-track
-				text-align center
-				padding-top 6px
+		.-track
+			text-align center
+			padding-top 6px
 
-		.-time
+	.-time
 
-			span
-				display inline-block
+		span
+			display inline-block
 
-				&:nth-child(1)
-					width 25px
-					text-align right
-					padding-right 6px
+			&:nth-child(1)
+				width 25px
+				text-align right
+				padding-right 6px
 
-				&:nth-child(2)
-					font-caption()
+			&:nth-child(2)
+				font-caption()
