--- a/styles/variables.styl
+++ b/styles/variables.styl
@@ -1,8 +1,10 @@
 // Colors
-_gray-darker = #333
-_gray-dark = #888
+_base-color = #556270
+
+_gray-darker = darken(_base-color, 30%)
+_gray-dark = lighten(_base-color, 0%)
 _gray-light = #ccc
-_gray-lighter = #eee
+_gray-lighter = lighten(_base-color, 90%)
 
 //Lists
 _list-height-station = 48px
