--- a/styles/components/stations.styl
+++ b/styles/components/stations.styl
@@ -2,6 +2,9 @@
 	transition color .3s
 	max-height calc(100% - 56px)
 	font-title()
+	position absolute
+	width 100%
+	background #fff
 
 	.Stations__item
 		flex-center()
